Fix overflow

--- a/css/ind.css
+++ b/css/ind.css
@@ -3,7 +3,6 @@ body {
     background-image: url(https://fotografias.larazon.es/clipping/cmsimages01/2021/05/21/5CC93B0A-3A12-47AF-895E-D35176522F8E/98.jpg?crop=3500,1969,x0,y181&width=1900&height=1069&optimize=low&format=webply);
     background-repeat: no-repeat;
     background-size: cover;
-    overflow: hidden;
 }
 
 h1 {
